<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valerov.food.takeActivity">


    <TextView
        android:id="@+id/textView_idp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/textView_idp" />

    <EditText
        android:id="@+id/editText_nidp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_idp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_nidp" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_nidp"
        android:layout_alignStart="@+id/editText_nidp"
        android:layout_below="@+id/editText_nidp"
        android:ems="10"
        android:inputType="number|phone"
        android:text="@string/editText_phone" />

    <EditText
        android:id="@+id/editText_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText_phone"
        android:layout_alignRight="@+id/editText_phone"
        android:layout_below="@+id/editText_phone"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_addr" />

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText_addr"
        android:layout_alignRight="@+id/editText_addr"
        android:layout_below="@+id/editText_addr"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_note" />

    <Button
        android:id="@+id/button_tpmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_note"
        android:layout_centerHorizontal="true"
        android:text="@string/button_tpmenu"
        android:onClick="menus"/>


</RelativeLayout>
