<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valerov.food.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        app:srcCompat="@drawable/ead" />

    <TextView
        android:id="@+id/textView_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/textView_pm" />
    <RadioGroup
        android:id="@+id/rg_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_pm"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <RadioButton
            android:id="@+id/rb_dine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_dine"/>
        <RadioButton
            android:id="@+id/rb_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_take"/>

    </RadioGroup>

    <Button
        android:id="@+id/b_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_collect"
        android:layout_centerHorizontal="true"
        android:text="@string/b_order"
        android:onClick="order"/>


</RelativeLayout>
